# lzma-cf

./: .gitattributes  .gitignore  README.md  REUSE.toml  pyproject.toml  setup.py
.github/workflows/: build.yml
pkg/: build_xz_utils  windows_build_xz_utils.bat  windows_linker_fixup  windows_linker_fixup.bat
src/lzma_cf/: _lzma_build.py
